화면작업중..

--- a/sixman/src/main/webapp/resources/css/messenger.css
+++ b/sixman/src/main/webapp/resources/css/messenger.css
@@ -1107,3 +1107,9 @@ input[id="chat-setting-check02"]{
 .chatroom-alarm-time{
 	font-size:12px;
 	width:80%;
+}
+
+.chatlistnull{
+	margin: 10%;
+    text-align: center;
+}
