더미이후 수정중

--- a/sixman/src/main/webapp/resources/css/mail/mailList.css
+++ b/sixman/src/main/webapp/resources/css/mail/mailList.css
@@ -45,6 +45,12 @@ input[type=checkbox]{
     color: var(--bo-40);
 }
 
+.list-item p:nth-of-type(2){
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    display: block;
+}
 
 
 .category-btn{
