--- a/sixman/src/main/webapp/resources/css/member/switch.css
+++ b/sixman/src/main/webapp/resources/css/member/switch.css
@@ -15,28 +15,34 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 20px 30px;
     gap: 10px;
 }
 
 .header {
     display: flex;
-    justify-content: center;
     align-items: center;
-    color: #3d3d3d;
-}
-.header span {
-    font-size: 30px;
-}
-.header h2 {
-    font-weight: 800;
-    font-size: 22px;
+    padding: 5px;
+    border-bottom: 1px solid var(--main-color-dark);
 }
 
-.body div:first-child {
-    margin: 20px 0;
+.header span {
+    font-size: 29px;
+    color: var(--main-color);
 }
+
+.header h2 {
+    font-weight: 900;
+    font-size: 18px;
+}
+
+.body {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
 .body input:focus {
     border-bottom: 1px solid var(--main-color);
 }
