--- a/sixman/src/main/webapp/resources/css/addressBook/add.css
+++ b/sixman/src/main/webapp/resources/css/addressBook/add.css
@@ -22,17 +22,18 @@
     width: 100%;
     height: 5%;
     display: flex;
-    align-items: flex-end;
-    border-bottom: 1px solid var(--bo-20);
+    align-items: center;
+    border-bottom: 1px solid var(--main-color-dark);
+    padding: 5px;
 }
 
 .header span {
     color: var(--main-color);
     margin-right: 7px;
-    font-size: 19px;
+    font-size: 28px;
 }
 .header label {
-    font-size: 16px;
+    font-size: 17px;
     font-weight: 700;
     margin-bottom: 2px;
 }
@@ -53,7 +54,7 @@
 }
 
 #card-pic {
-    background-color: var(--main-color);
+    background-color: #17a89770;
     width: 100%;
     height: 25%;
     display: flex;
@@ -335,7 +336,13 @@ select {
     align-items: center;
     cursor: pointer;
 }
+.error {
+    border: 1px solid #e85c5c;
+}
 
+.error:focus {
+    outline-color: #e85c5c;
+}
 .sortation-item ~ li > .address-item {
     width: 70%;
     border: 1px solid var(--main-color);
