--- a/sixman/src/main/webapp/resources/css/addressBook/detail.css
+++ b/sixman/src/main/webapp/resources/css/addressBook/detail.css
@@ -22,17 +22,18 @@
     width: 100%;
     height: 5%;
     display: flex;
-    align-items: flex-end;
-    border-bottom: 1px solid var(--bo-20);
+    align-items: center;
+    border-bottom: 1px solid var(--main-color-dark);
+    padding: 5px;
 }
 
 .header span {
     color: var(--main-color);
     margin-right: 7px;
-    font-size: 19px;
+    font-size: 28px;
 }
 .header label {
-    font-size: 16px;
+    font-size: 17px;
     font-weight: 700;
     margin-bottom: 2px;
 }
