--- a/sixman/src/main/webapp/resources/css/organizationChart/list.css
+++ b/sixman/src/main/webapp/resources/css/organizationChart/list.css
@@ -120,22 +120,24 @@
     align-items: center;
     gap: 10px;
 }
-#employee-detail p {
-    font-size: 15px;
-}
-
-#employee-detail > p:nth-child(5) {
-    font-size: 13px;
-}
-
+#emp-deptInfo,
 #employee-name {
     display: flex;
     align-items: flex-end;
+    gap: 5px;
+    font-size: 15px;
 }
 
+#emp-deptInfo p:last-child,
 #employee-name p:last-child {
+    font-size: 11px;
+}
+#emp-dept {
     font-size: 13px;
-    margin-left: 5px;
+}
+
+#emp-name {
+    font-weight: 600;
 }
 
 #employee-pic {
@@ -182,10 +184,25 @@
 #companyLogo {
     margin: 0px 0px 10px 10px;
     width: 100px;
+    height: 40px;
+    overflow: hidden;
 }
 
 #companyLogo > img {
-    max-width: 100%;
+    max-width: 100px;
+    max-height: 40px;
+    object-fit: fill;
+}
+
+#companyLogo-detail {
+    width: 100px;
+    height: 40px;
+    overflow: hidden;
+}
+
+#companyLogo > img {
+    max-width: 100px;
+    max-height: 40px;
     object-fit: fill;
 }
 
@@ -284,7 +301,7 @@
 
 #dept-detail-title {
     width: 100%;
-    height: 7%;
+    height: 10%;
     color: var(--main-color);
     font-size: 18px;
     font-weight: 600;
@@ -296,11 +313,17 @@
 }
 .dept-list-wrap {
     width: 100%;
-    height: 88%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     gap: 5px;
+    overflow-y: scroll;
 }
+
+.dept-list-wrap::-webkit-scrollbar {
+    width: 3px;
+}
+
 #dept-detail-title h3 {
     font-size: 14px;
     color: var(--bo-60);
@@ -309,7 +332,7 @@
 .dept-detail-list {
     display: flex;
     width: 100%;
-    height: 10%;
+    height: 15%;
     border-bottom: 1px solid var(--bo-20);
     padding: 5px 5px 10px 5px;
     justify-content: space-between;
@@ -493,7 +516,7 @@
     margin-left: 23px;
 }
 
-.memberList-item > a {
+.memberList-item > p {
     font-size: 12px;
     width: 100%;
     display: flex;
@@ -501,7 +524,7 @@
     text-decoration: none;
     color: #000;
 }
-.memberList-item > a > span {
+.memberList-item > p > span {
     margin-right: 4px;
     color: var(--main-color);
 }
