--- a/sixman/src/main/webapp/resources/css/mainPage.css
+++ b/sixman/src/main/webapp/resources/css/mainPage.css
@@ -33,9 +33,13 @@
 }
 #time-box{
     color: var(--main-color-dark);
-    font-size: 2em;
+    font-size: 2.7em;
     font-weight: 500;
     margin-bottom: 10px;
+}
+#date-box{
+    color: var(--main-color-dark);
+    font-size: 1.1em; 
 }
 #btn-box{
     display: flex;
