--- a/sixman/src/main/webapp/resources/css/addressBook/add.css
+++ b/sixman/src/main/webapp/resources/css/addressBook/add.css
@@ -281,11 +281,25 @@ select {
     color: var(--main-color);
 }
 
-/* 부서목록 */
+/* 카테목록 */
+
+.title-sor {
+    display: flex;
+    align-items: center;
+}
+
+#cateSet {
+    cursor: pointer;
+    color: var(--bo-40);
+}
+
+#cateSet:hover {
+    color: var(--main-color-dark);
+}
 
 .sortation-title {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid var(--main-color-dark);
     padding: 3px 0;
