--- a/sixman/src/main/webapp/resources/css/addressBook/detail.css
+++ b/sixman/src/main/webapp/resources/css/addressBook/detail.css
@@ -54,7 +54,7 @@
 }
 
 #card-pic {
-    background-color: var(--main-color);
+    background-color: #17a89770;
     width: 100%;
     height: 25%;
     display: flex;
@@ -281,11 +281,25 @@ select {
     color: var(--main-color);
 }
 
-/* 부서목록 */
+/* 카테목록 */
+
+.title-sor {
+    display: flex;
+    align-items: center;
+}
+
+#cateSet {
+    cursor: pointer;
+    color: var(--bo-40);
+}
+
+#cateSet:hover {
+    color: var(--main-color-dark);
+}
 
 .sortation-title {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid var(--main-color-dark);
     padding: 3px 0;
@@ -336,7 +350,13 @@ select {
     align-items: center;
     cursor: pointer;
 }
+.error {
+    border: 1px solid #e85c5c;
+}
 
+.error:focus {
+    outline-color: #e85c5c;
+}
 .sortation-item ~ li > .address-item {
     width: 70%;
     border: 1px solid var(--main-color);
