--- a/sixman/src/main/webapp/resources/css/admin/company/edit.css
+++ b/sixman/src/main/webapp/resources/css/admin/company/edit.css
@@ -15,7 +15,7 @@
     width: 20%;
     height: 100%;
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     gap: 40px;
 }
 
@@ -190,15 +190,14 @@ input[type='submit']:hover,
 
 input[type='submit'] {
     align-self: flex-end;
-    width: 100px;
-    padding: 10px 20px;
+    width: 80px;
+    padding: 5px 15px;
     border: none;
     background-color: var(--main-color);
     color: #fff;
     cursor: pointer;
     border-radius: 2px;
     font-size: 17px;
-    font-weight: 600;
 }
 
 #map {
@@ -211,7 +210,7 @@ input[type='submit'] {
 .team-wrap,
 .dept-wrap {
     width: 100%;
-    height: 90%;
+    height: 87%;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -220,14 +219,24 @@ input[type='submit'] {
 .position-list,
 .team-list,
 .dept-list {
-    padding: 10px;
     width: 100%;
-    height: 90%;
+    height: 75%;
     display: flex;
     flex-direction: column;
     gap: 5px;
     border: 1px solid var(--bo-20);
     overflow-y: scroll;
+}
+
+.position-list > div,
+.team-list > div,
+.dept-list > div {
+    padding: 10px;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
 #deptNo {
@@ -259,6 +268,7 @@ input[type='submit'] {
 .dept-item,
 .team-item {
     width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     gap: 10px;
