--- a/sixman/src/main/webapp/resources/css/tempMain.css
+++ b/sixman/src/main/webapp/resources/css/tempMain.css
@@ -82,6 +82,31 @@ a {
     justify-self: center;
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.03);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow-y: hidden;
+    position: relative;
+}
+#event-msg-box > div{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 175px;
+
+    transition: 0.7s;
+}
+
+#event-msg-box div div{
+    width: 100%;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 #my-menu {
     display: flex;
