--- a/sixman/src/main/webapp/resources/css/admin/member/detail.css
+++ b/sixman/src/main/webapp/resources/css/admin/member/detail.css
@@ -59,12 +59,11 @@
 }
 #companyLogo {
     margin: 0px 0px 10px 10px;
-    width: 100px;
+    height: 70px;
 }
 
 #companyLogo > img {
-    max-width: 100%;
-    object-fit: fill;
+    height: 100%;
 }
 
 .wrap {
