--- a/sixman/src/main/webapp/resources/css/messenger.css
+++ b/sixman/src/main/webapp/resources/css/messenger.css
@@ -72,14 +72,15 @@
     border-radius: 50%;
     cursor: pointer;
 }
-.material-symbols-outlined {
+
+/* .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
   'wght' 400,
   'GRAD' 0,
   'opsz' 48;
   margin-left:2%;
-}
+} */
 
 .bottom-area{
 
