--- a/sixman/src/main/webapp/resources/css/main.css
+++ b/sixman/src/main/webapp/resources/css/main.css
@@ -358,6 +358,12 @@ a {
     align-items: center;
     padding: 5px;
     padding-left: 10px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+#inner-box::-webkit-scrollbar{
+    width: 0;
 }
 
 .alarm-item {
@@ -368,6 +374,7 @@ a {
     align-items: center;
     gap: 5px;
     cursor: pointer;
+    padding: 5px 0;
 }
 
 .alarm-item:hover {
